--- a/download.html
+++ b/download.html
@@ -3,10 +3,18 @@ layout: default
 ---
 
 <h1 style="text-align: center;">DOWNLOAD</h1>
-<h2 class="elementor-heading-title elementor-size-large">Cutefish Built on Ubuntu 21.04 (Hirsute hippo)&nbsp;</h2>
-<p><span style="color: #e03e2d;"><strong>NEW!</strong></span> <a href="https://bit.ly/3zcYaRr">Download</a> - Cutefish-Ubuntu v0.1.1 Beta - Developer Edition</p>
-<p><a href="https://bit.ly/3e3zL8W" rel="nofollow">Download</a> - Cutefish-Ubuntu v0.1 Beta - Developer Edition</p>
+<h2 class="elementor-heading-title elementor-size-large" style="text-align: center;">CutefishOS Built on Ubuntu 21.10 (Impish Indri) </h2>
 
-<hr>
-<div paypal="" style="text-align:center">
-<a href="https://www.paypal.com/donate?hosted_button_id=S7WAC4BVRUAFJ" style="text-decoration:none;"><span class="paypal-logo" style="font-family: Verdana, Tahoma; font-weight: bold; font-size: 28px;"><i style="color: #000; text-shadow: 1px 1px 1px #fff;">Donate </i><i style="color: #253b80; text-shadow: 1px 1px 1px #fff;">Pay</i><i style="color: #179bd7; text-shadow: 1px 1px 1px #fff;">Pal</i></span></a></div>
+<div style="border:3px #dfdfdf  solid;border-radius: 10px; padding:10px;">
+<p><strong>CutefishOS - Ubuntu v0.8 (Ubiquity Installer)</strong> 
+<br />Download: 
+<a title="MEGA" href="https://bit.ly/3syxxVf" target="_blank" rel="noopener"><strong><span style="color: #e03e2d;">MEGA</span></strong></a> | 
+<a title="Torrent" href="https://bit.ly/3HNvxyY" target="_blank" rel="noopener"><strong><span style="color: #3598db;">Torrent</span></strong></a>
+</div>
+
+<h2 class="elementor-heading-title elementor-size-large" style="text-align: center;">CutefishOS Built on Ubuntu 21.04 (Hirsute hippo) </h2>
+
+<div style="border:3px #dfdfdf  solid;border-radius: 10px; padding:10px;">
+<p><strong>CutefishOS - Ubuntu v0.4.2 Beta - Developer Edition </strong>
+<br />Download: <a title="MEGA" href="https://bit.ly/38MgPIE" target="_blank" rel="noopener"><strong><span style="color: #e03e2d;">MEGA</span></strong></a> | <a title="Direct Link" href="https://bit.ly/3jONm7l" target="_blank" rel="noopener"><strong><span style="color: #3598db;">Direct Link</span></strong></a></p>
+</div>
